Adds options and finishes virtual threads version